Added game function and win conditions

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <section class="board">
-      <div class="cell circle"></div>
-      <div class="cell cross"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
       <div class="cell"></div>
       <div class="cell"></div>
       <div class="cell"></div>
