Added gameOver cond and restart button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <div class="cell"></div>
       <div class="cell"></div>
     </section>
+    <h1 id="result"></h1>
+    <button id="restart">Restart Game</button>
     <script src="script.js"></script>
   </body>
 </html>
